[package]
name = "grass_compiler"
version = "0.12.1"
edition = "2021"
description = "Internal implementation of the grass compiler"
readme = "../../README.md"
license = "MIT"
categories = ["web-programming"]
keywords = ["scss", "sass", "css", "web"]
repository = "https://github.com/connorskees/grass"
authors = ["Connor Skees <39542938+ConnorSkees@users.noreply.github.com>"]

[lib]
name = "grass_compiler"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
# todo: use lazy_static
once_cell = "1.15.0"
# todo: use xorshift for random numbers
rand = { version = "0.8", optional = true }
# todo: update to use asref<path>
# todo: update to expose more info (for eww)
# todo: update to use text_size::TextRange
codemap = "0.1.3"
wasm-bindgen = { version = "0.2.68", optional = true,  features = ["serde-serialize"]  }
# todo: benchmark using phf for global functions
phf = { version = "0.10.1", features = ["macros"] }
indexmap = "1.9.0"
# todo: do we really need interning for things?
lasso = "0.6"
serde = { version = "1.0.130", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = { version = "0.3.60", optional = true }
[features]
default = ["random", "wasm-exports"]
# Option (enabled by default): enable the builtin functions `random([$limit])` and `unique-id()`
random = ["rand"]
# Option: expose JavaScript-friendly WebAssembly exports
wasm-exports = ["wasm-bindgen", "js-sys"]